testsuite/tests/properties/invalid_super/invalid_prefix.lkt
import common

class FooNode implements Node[FooNode] {
    @exported fun p(): Int = 1
}

class Example: FooNode implements TokenNode {
    fun p(): Int = node.parent.super() + 1
}

class Number: FooNode implements TokenNode {
}
